[package]
name = "klemme"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
serial2 = "0.2.28"
snafu = "0.8.5"

[profile.release]
opt-level = 'z' # Optimize for size
lto = true
